lxx-1.0.0/lua-lxx/lua-parser.c
/* This file is automatically generated by Lemon from input grammar
** source file "lua-parser.ly". */
/*
** 2000-05-29
**
** The author disclaims copyright to this source code.  In place of
** a legal notice, here is a blessing:
**
**    May you do good and not evil.
**    May you find forgiveness for yourself and forgive others.
**    May you share freely, never taking more than you give.
**
*************************************************************************
** Driver template for the LEMON parser generator.
**
** The "lemon" program processes an LALR(1) input grammar file, then uses
** this template to construct a parser.  The "lemon" program inserts text
** at each "%%" line.  Also, any "P-a-r-s-e" identifer prefix (without the
** interstitial "-" characters) contained in this template is changed into
** the value of the %name directive from the grammar.  Otherwise, the content
** of this template is copied straight through into the generate parser
** source file.
**
** The following is the concatenation of all %include directives from the
** input grammar file:
*/
/************ Begin %include sections from the grammar ************************/
#line 13 "lua-parser.ly"


  #include <stdio.h>
  #include <string.h>
  #include <stdlib.h>
  #include <limits.h>
  #include <stdarg.h>
  #include <assert.h>
  #include "lua-parser.h"

  enum SepcialTokens {
    TK_SPACE = TK_LEMON_LAST_TOKEN,
    TK_COMMENT,
    TK_LONGCOMMENT,
    TK_THEEND
  };

  enum TokenFlags {
    noSemicolonNeeded = 0x01,
  };

  typedef struct LuaParserToken {
    int token_id;
    int space_before_size;
    int space_before_pos;
    int token_value_size;
    const char *token_value;
    int flags;
  } LuaParserToken;

 // void dummyFree(void *p) {assert(p);};

  typedef struct LuaParserState {
    const char *src;
    void **stack;
    int stack_size, stack_top;
    int noToCompound;
  } LuaParserState;

  void initializeLuaParserState(LuaParserState *pState) {
    pState->src = NULL;
    pState->stack = NULL;
    pState->stack_size = 0;
    pState->stack_top = 0;
    pState->noToCompound = 0;
  }

  void resetLuaParserState(LuaParserState *pState) {
    for(int i=0; i < pState->stack_top; ++i) {
      LuaParserToken *tk = pState->stack[i];
      if(tk->token_value_size < 0) {
        free((void*)tk->token_value);
      }
      free(tk);
    }
    free(pState->stack);
    initializeLuaParserState(pState);
  }

  void pushLuaParserToken(LuaParserState *pState, LuaParserToken *tk) {
    int new_top = pState->stack_top + 1;
    if(new_top >= pState->stack_size) {
      size_t new_size = ((pState->stack_size) ? pState->stack_size * 2 : 32);
      void *new_stack = realloc(pState->stack, new_size * sizeof(void*));
      if(!new_stack) {
        printf("Failed to allocate memory of size = %d\n", (int) new_size);
        exit(1);
      }
      pState->stack = new_stack;
      pState->stack_size = new_size;
    }
    //printf("%d: %d : %.*s\n", pState->stack_top, tk->token_id, tk->token_value_size, pState->src + tk->token_value_pos);fflush(stdout);
    //printf("push = %d : %d\n", pState->stack_top, pState->stack_size);
    pState->stack[pState->stack_top++] = tk;
  }

  int getLuaParserStateChildren(LuaParserState *pState, LuaParserToken *tk) {
    int children = 0;
    for(int i=pState->stack_top-1; i >= 0; --i) {
      if(pState->stack[i] == tk) break;
      ++children;
    }
    return children;
  }

  LuaParserToken *getLastLuaParserState(LuaParserState *pState) {
    /*
    * There is a problem with this when the last stement is not followed by a '\n'
    * right now we are avoiding it by adding a '\n' at the end when reading the file
    */
    int idx = pState->stack_top-2;
    LuaParserToken *ltk = pState->stack[idx];
    for(; idx >= 0; --idx) {
      //if the token is a comment/space skip it
      if(ltk->token_id < TK_LEMON_LAST_TOKEN) break;
      ltk = pState->stack[idx];
    }
    return ltk;
  }

  LuaParserToken *getNextLuaParserState(LuaParserState *pState, LuaParserToken *tk) {
    int idx = pState->stack_top-2;
    int top = idx;
    LuaParserToken *ltk = pState->stack[idx];
    while(idx >= 0 && pState->stack[idx] != tk) --idx;
    while(++idx <= top) {
      ltk = pState->stack[idx];
      //if the token is a comment/space skip it
      if(ltk->token_id < TK_LEMON_LAST_TOKEN) break;
    }
    return ltk;
  }

  int getLuaParserStateForwardCount(LuaParserState *pState, LuaParserToken *tk) {
    int idx = pState->stack_top-2;
    int top = idx;
    while(idx >= 0 && pState->stack[idx] != tk) --idx;
    return top - idx;
  }

  char *newStrFmt(LuaParserToken *tk, const char* fmt, ...) __attribute__ ((__format__ (__printf__, 2, 3)));
  char *newStrFmt(LuaParserToken *tk, const char* fmt, ...) {
    char tmp[8];
    va_list args;
    va_start(args, fmt);
    int sz = vsnprintf(tmp, sizeof(tmp), fmt, args);
    if(sz < 0) {
      printf("bad format string |%s|\n", fmt);
      exit(1);
    }
    va_end(args);

    char *str = malloc(sz+1);
    va_start(args, fmt);
    sz = vsnprintf(str, sz+1, fmt, args);
    va_end(args);
    if(tk->token_value_size < 0) free((void*)tk->token_value);
    tk->token_value = str;
    tk->token_value_size = -sz;
    return str;
  }

  void doOutput(LuaParserState *pState) {
    for(int i=0; i < pState->stack_top; ++i) {
      LuaParserToken *tk = pState->stack[i];
      if(tk->token_id < 0) {
        fprintf(stdout, "%c", tk->token_id*-1);
        continue;
      }
      if(tk->space_before_size) {
        fprintf(stdout, "%.*s", tk->space_before_size, pState->src + tk->space_before_pos);
      }
      //if(tk->children) fprintf(stderr, "|%d|", tk->children);
      fprintf(stdout, "%.*s", abs(tk->token_value_size), tk->token_value);
    }
  }

  void setTokenValue(LuaParserToken *tk, const char *str) {
    if(tk->token_value_size < 0) free((void*)tk->token_value);
    tk->token_value_size = strlen(str);
    tk->token_value = str;
  }
  void moveTokenValue(LuaParserToken *tk, LuaParserToken *tk_src) {
    if(tk->token_value_size < 0) free((void*)tk->token_value);
    tk->token_value_size = tk_src->token_value_size;
    tk->token_value = tk_src->token_value;
    tk_src->token_value = NULL;
    tk_src->token_value_size = 0;
  }
  void local2var(LuaParserToken *tk) {setTokenValue(tk, "var");}

  int _canMakePlusPlusMinusMinus(LuaParserState *pState, LuaParserToken *tkSrc, LuaParserToken *tkAssign, LuaParserToken *tk1,
						LuaParserToken *tkOp, const char *mORp) {
    LuaParserToken *tkAftertOp = getNextLuaParserState(pState, tkOp);
    if(tkAftertOp->token_value_size == 1 && tkAftertOp->token_value[0] == '1') {
	newStrFmt(tkSrc, "%s%.*s", mORp, tkSrc->token_value_size, tkSrc->token_value);
	setTokenValue(tkAftertOp, "");
	setTokenValue(tk1, "");
	setTokenValue(tkOp, "");
	setTokenValue(tkAssign, "");
	return 1;
    }
    return 0;
  }

  void checkSetAssignTokenOpToken(LuaParserState *pState, LuaParserToken *tkSrc, LuaParserToken *tkAssign, LuaParserToken *tk1) {

   /* compound assignment can produce a wrong result when there is more than one expression on the right side */
   /* so it's a bad idea to do it blindly */

    if(tkAssign->token_id != TK_ASSIGN) return;
    if(pState->noToCompound) return;
    if(getNextLuaParserState(pState, tkSrc) != tkAssign) return; //if it's a list assignment do nothing
    if(tkSrc->token_value_size == tk1->token_value_size) {
      if(strncmp(tkSrc->token_value, tk1->token_value, tkSrc->token_value_size) == 0) {
        LuaParserToken *tkOp = getNextLuaParserState(pState, tk1);
	int forwardCount = getLuaParserStateForwardCount(pState, tk1);

	if(forwardCount > 2) return; //only safe to do it with two ahead tokens/expressions
	//printf("== %.*s : %d\n", tkSrc->token_value_size, tkSrc->token_value, forwardCount);

        const char *newOp = NULL;
        switch(tkOp->token_id) {
          case TK_PLUS:
            if(_canMakePlusPlusMinusMinus(pState, tkSrc, tkAssign, tk1, tkOp, "++")) return;
            newOp = "+=";
          break;
          case TK_MINUS:
            if(_canMakePlusPlusMinusMinus(pState, tkSrc, tkAssign, tk1, tkOp, "--")) return;
            newOp = "-=";
          break;
/* this ones are safe only if there is one more expresion */
          case TK_MOD:
            newOp = "%=";
          break;
          case TK_MUL:
            newOp = "*=";
          break;
          case TK_DIV:
            newOp = "/=";
          break;
        }
        if(newOp) {
          setTokenValue(tkAssign, newOp);
          setTokenValue(tk1, "");
          setTokenValue(tkOp, "");
        }
      }
    }
  }

  void dumpToken(LuaParserToken *tk) {
    printf("%d : %.*s\n", tk->token_id, tk->token_value_size, tk->token_value);
  }

  void setTokenFlag(LuaParserToken *tk, enum TokenFlags fv, int OnOff) {
    if(OnOff) tk->flags |= fv;
    else tk->flags &= ~fv;
  }

  void fixLongStringQuote(LuaParserToken *tk) {
    if(tk->token_value[1] == '[') {
      /* we need at least one '=' on the quote to differentiate from arrays */
      int tk_vsz = abs(tk->token_value_size);
      int sz = tk_vsz + 2;
      char *str = malloc(sz+1);
      snprintf(str, sz+1, "[=[%.*s]=]", tk_vsz-4, tk->token_value+2);
      if(tk->token_value_size < 0) free((void*)tk->token_value);
      tk->token_value = str;
      tk->token_value_size = sz * -1;
    }
  }

#line 283 "lua-parser.c"
/**************** End of %include directives **********************************/
/* These constants specify the various numeric values for terminal symbols.
***************** Begin token definitions *************************************/
#ifndef TK_OPEN
#define TK_OPEN                            1
#define TK_LPAREN                          2
#define TK_SEMICOLON                       3
#define TK_UNTIL                           4
#define TK_DO                              5
#define TK_END                             6
#define TK_WHILE                           7
#define TK_REPEAT                          8
#define TK_IF                              9
#define TK_FUNCTION                       10
#define TK_ASSIGN                         11
#define TK_GOTO                           12
#define TK_LABEL                          13
#define TK_FOR                            14
#define TK_IN                             15
#define TK_ELSE                           16
#define TK_ELSEIF                         17
#define TK_THEN                           18
#define TK_BREAK                          19
#define TK_RETURN                         20
#define TK_LOCAL                          21
#define TK_COLON                          22
#define TK_DOT                            23
#define TK_COMMA                          24
#define TK_OR                             25
#define TK_AND                            26
#define TK_EQ                             27
#define TK_NEQ                            28
#define TK_LT                             29
#define TK_LTEQ                           30
#define TK_BT                             31
#define TK_BTEQ                           32
#define TK_CONCAT                         33
#define TK_PLUS                           34
#define TK_MINUS                          35
#define TK_MUL                            36
#define TK_DIV                            37
#define TK_MOD                            38
#define TK_NOT                            39
#define TK_LEN                            40
#define TK_POW                            41
#define TK_NIL                            42
#define TK_TRUE                           43
#define TK_FALSE                          44
#define TK_NUMBER                         45
#define TK_ELLIPSIS                       46
#define TK_IDIV                           47
#define TK_SHL                            48
#define TK_SHR                            49
#define TK_BITAND                         50
#define TK_BITOR                          51
#define TK_BITNOT                         52
#define TK_LBRACKET                       53
#define TK_RBRACKET                       54
#define TK_RPAREN                         55
#define TK_LBRACE                         56
#define TK_RBRACE                         57
#define TK_NAME                           58
#define TK_STRING                         59
#define TK_LONGSTRING                     60
#endif
/**************** End token definitions ***************************************/

/* The next sections is a series of control #defines.
** various aspects of the generated parser.
**    YYCODETYPE         is the data type used to store the integer codes
**                       that represent terminal and non-terminal symbols.
**                       "unsigned char" is used if there are fewer than
**                       256 symbols.  Larger types otherwise.
**    YYNOCODE           is a number of type YYCODETYPE that is not used for
**                       any terminal or nonterminal symbol.
**    YYFALLBACK         If defined, this indicates that one or more tokens
**                       (also known as: "terminal symbols") have fall-back
**                       values which should be used if the original symbol
**                       would not parse.  This permits keywords to sometimes
**                       be used as identifiers, for example.
**    YYACTIONTYPE       is the data type used for "action codes" - numbers
**                       that indicate what to do in response to the next
**                       token.
**    LuaParserTOKENTYPE     is the data type used for minor type for terminal
**                       symbols.  Background: A "minor type" is a semantic
**                       value associated with a terminal or non-terminal
**                       symbols.  For example, for an "ID" terminal symbol,
**                       the minor type might be the name of the identifier.
**                       Each non-terminal can have a different minor type.
**                       Terminal symbols all have the same minor type, though.
**                       This macros defines the minor type for terminal
**                       symbols.
**    YYMINORTYPE        is the data type used for all minor types.
**                       This is typically a union of many types, one of
**                       which is LuaParserTOKENTYPE.  The entry in the union
**                       for terminal symbols is called "yy0".
**    YYSTACKDEPTH       is the maximum depth of the parser's stack.  If
**                       zero the stack is dynamically sized using realloc()
**    LuaParserARG_SDECL     A static variable declaration for the %extra_argument
**    LuaParserARG_PDECL     A parameter declaration for the %extra_argument
**    LuaParserARG_PARAM     Code to pass %extra_argument as a subroutine parameter
**    LuaParserARG_STORE     Code to store %extra_argument into yypParser
**    LuaParserARG_FETCH     Code to extract %extra_argument from yypParser
**    LuaParserCTX_*         As LuaParserARG_ except for %extra_context
**    YYERRORSYMBOL      is the code number of the error symbol.  If not
**                       defined, then do no error processing.
**    YYNSTATE           the combined number of states.
**    YYNRULE            the number of rules in the grammar
**    YYNTOKEN           Number of terminal symbols
**    YY_MAX_SHIFT       Maximum value for shift actions
**    YY_MIN_SHIFTREDUCE Minimum value for shift-reduce actions
**    YY_MAX_SHIFTREDUCE Maximum value for shift-reduce actions
**    YY_ERROR_ACTION    The yy_action[] code for syntax error
**    YY_ACCEPT_ACTION   The yy_action[] code for accept
**    YY_NO_ACTION       The yy_action[] code for no-op
**    YY_MIN_REDUCE      Minimum value for reduce actions
**    YY_MAX_REDUCE      Maximum value for reduce actions
*/
#ifndef INTERFACE
# define INTERFACE 1
#endif
/************* Begin control #defines *****************************************/
#define YYCODETYPE unsigned char
#define YYNOCODE 95
#define YYACTIONTYPE unsigned short int
#define LuaParserTOKENTYPE  LuaParserToken* 
typedef union {
  int yyinit;
  LuaParserTOKENTYPE yy0;
} YYMINORTYPE;
#ifndef YYSTACKDEPTH
#define YYSTACKDEPTH 1000
#endif
#define LuaParserARG_SDECL  LuaParserState *pState ;
#define LuaParserARG_PDECL , LuaParserState *pState 
#define LuaParserARG_PARAM ,pState 
#define LuaParserARG_FETCH  LuaParserState *pState =yypParser->pState ;
#define LuaParserARG_STORE yypParser->pState =pState ;
#define LuaParserCTX_SDECL
#define LuaParserCTX_PDECL
#define LuaParserCTX_PARAM
#define LuaParserCTX_FETCH
#define LuaParserCTX_STORE
#define YYFALLBACK 1
#define YYNSTATE             143
#define YYNRULE              111
#define YYNRULE_WITH_ACTION  34
#define YYNTOKEN             61
#define YY_MAX_SHIFT         142
#define YY_MIN_SHIFTREDUCE   202
#define YY_MAX_SHIFTREDUCE   312
#define YY_ERROR_ACTION      313
#define YY_ACCEPT_ACTION     314
#define YY_NO_ACTION         315
#define YY_MIN_REDUCE        316
#define YY_MAX_REDUCE        426
/************* End control #defines *******************************************/
#define YY_NLOOKAHEAD ((int)(sizeof(yy_lookahead)/sizeof(yy_lookahead[0])))

/* Define the yytestcase() macro to be a no-op if is not already defined
** otherwise.
**
** Applications can choose to define yytestcase() in the %include section
** to a macro that can assist in verifying code coverage.  For production
** code the yytestcase() macro should be turned off.  But it is useful
** for testing.
*/
#ifndef yytestcase
# define yytestcase(X)
#endif

